; ModuleID = '/home/carl/AnghaBench/TDengine/src/util/src/extr_sql.c_ParseTrace.c'
source_filename = "/home/carl/AnghaBench/TDengine/src/util/src/extr_sql.c_ParseTrace.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@yyTraceFILE = common dso_local global i32* null, align 8
@yyTracePrompt = common dso_local global i8* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ParseTrace(i32* %0, i8* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i8*, align 8
  store i32* %0, i32** %3, align 8
  store i8* %1, i8** %4, align 8
  %5 = load i32*, i32** %3, align 8
  store i32* %5, i32** @yyTraceFILE, align 8
  %6 = load i8*, i8** %4, align 8
  store i8* %6, i8** @yyTracePrompt, align 8
  %7 = load i32*, i32** @yyTraceFILE, align 8
  %8 = icmp eq i32* %7, null
  br i1 %8, label %9, label %10

9:                                                ; preds = %2
  store i8* null, i8** @yyTracePrompt, align 8
  br label %15

10:                                               ; preds = %2
  %11 = load i8*, i8** @yyTracePrompt, align 8
  %12 = icmp eq i8* %11, null
  br i1 %12, label %13, label %14

13:                                               ; preds = %10
  store i32* null, i32** @yyTraceFILE, align 8
  br label %14

14:                                               ; preds = %13, %10
  br label %15

15:                                               ; preds = %14, %9
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
